# seo_art_auto_crewai

./: .gitignore  README.md  app.py  pyproject.toml
output/: article.md  article1.md  articleaijournalist.md  articleect2.md  articleect3.md  articlefrai.md  articlescrapegraph.md  articletechlisbon.md
src/seo_art_auto/: crew.py  main.py
src/seo_art_auto/config/: agents.yaml  tasks.yaml
src/seo_art_auto/tools/: brave_search.py  google_trends_tool.py
